crates/rome_formatter/tests/specs/prettier/decorators/comments.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: comments.js

---
# Input
```js
var x = 100

@Hello({
  a: 'a', // Comment is in the wrong place
  // test
  b: '2'
})
class X {

}


@NgModule({
  // Imports.
  imports: [
    // Angular modules.
    BrowserModule,

    // App modules.
    CoreModule,
    SharedModule,
  ],
})
export class AppModule {}

// A
@Foo()
// B
@Bar()
// C
export class Bar{}

```

# Output
```js
var x = 100;



@Hello(
{
  a: 'a', // Comment is in the wrong place
  // test
  b: '2'
})
class X {

}


@NgModule({
  // Imports.
  imports: [
    // Angular modules.
    BrowserModule,

    // App modules.
    CoreModule,
    SharedModule,
  ],
})
export class AppModule {}

// A
@Foo()
// B
@Bar()
// C
export class Bar{}

```

# Errors
```
error[SyntaxError]: expected a statement but instead found '@Hello('
  ┌─ comments.js:3:1
  │
3 │ @Hello({
  │ ^^^^^^^ Expected a statement here

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ comments.js:6:4
  │  
4 │     a: 'a', // Comment is in the wrong place
  │ ┌──────'
5 │ │   // test
6 │ │   b: '2'
  │ │    ^ An explicit or implicit semicolon is expected here...
  │ └────' ...Which is required to end this statement

error[SyntaxError]: expected a statement but instead found '@NgModule('
   ┌─ comments.js:13:1
   │
13 │ @NgModule({
   │ ^^^^^^^^^^ Expected a statement here

error[SyntaxError]: expected an expression but instead found '}'
   ┌─ comments.js:23:1
   │
23 │ })
   │ ^ Expected an expression here

error[SyntaxError]: expected a statement but instead found ')'
   ┌─ comments.js:23:2
   │
23 │ })
   │  ^ Expected a statement here

error[SyntaxError]: Illegal use of an import declaration not at the top level
   ┌─ comments.js:24:1
   │
24 │ export class AppModule {}
   │ ^^^^^^^^^^^^^^^^^^^^^^^^^ move this declaration to the top level

error[SyntaxError]: expected a statement but instead found '@Foo()
// B
@Bar()'
   ┌─ comments.js:27:1
   │  
27 │ ┌ @Foo()
28 │ │ // B
29 │ │ @Bar()
   │ └──────^ Expected a statement here

error[SyntaxError]: Illegal use of an import declaration not at the top level
   ┌─ comments.js:31:1
   │
31 │ export class Bar{}
   │ ^^^^^^^^^^^^^^^^^^ move this declaration to the top level

error[SyntaxError]: expected `'}'` but instead the file ends
   ┌─ comments.js:32:1
   │
32 │ 
   │ ^ the file ends here


```


